--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,8 @@
     "axios": "^1.7.7",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "env": "^0.0.2",
     "express": "^4.21.1",
     "firebase": "^11.0.2",
     "framer-motion": "^11.11.17",
